<resources>
    <string name="app_name">Spitball</string>
    <string name="start_button_text">Start</string>
    <string name="title_text">Spitball</string>
    <string name="sounds_title_text">Sounds</string>
    <string name="categories_title_text">Categories</string>
    <string name="checkbox_default_text">Checkbox</string>
    <string name="current_word_default_text">ABCD EFGHI JKLMN OPQRSTU VWXYZ</string>
    <string name="next_button_text">NEXT</string>
    <string name="team_one_title_text">TEAM 1:</string>
    <string name="team_two_title_text">TEAM 2:</string>
    <string name="team_score_default_text">0</string>
    <string name="team_score_increment_button_text">+</string>
    <string name="team_score_decrement_button_text">-</string>
    <string name="start_next_round_button_text">Start Next Round</string>
    <string name="final_word_of_previous_round_header_text">TIME\'S UP!</string>
    <string name="final_word_of_previous_round_header_default_text">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="winning_message_default_text">Team XXX Wins!</string>
    <string name="settings_screen_title_text">Settings</string>
    <string name="settings_screen_back_button_text">&lt;</string>
    <string name="settings_screen_team_one_name_text">Left Team Name:</string>
    <string name="settings_screen_team_one_name_default_value">Team One</string>
    <string name="settings_screen_team_two_name_text">Right Team Name:</string>
    <string name="settings_screen_team_two_name_default_value">Team Two</string>
    <string name="settings_screen_average_round_time_text">Average Round Time (s):</string>
    <string name="settings_screen_average_round_time_default_value">90</string>
    <string name="settings_screen_points_to_win_text">Points needed to win:</string>
    <string name="settings_screen_points_to_win_default_value">7</string>
    <string name="info_screen_title_text">Information</string>
    <string name="info_screen_back_button_text">&lt;</string>
    <string name="info_screen_developer_title">Developer:</string>
    <string name="info_screen_developer_name">Kopake</string>
    <string name="info_screen_artist_title">Art Design:</string>
    <string name="info_screen_artist_name">Noahnator99</string>
    <string name="info_screen_sound_designer_title">Sound Design:</string>
    <string name="info_screen_sound_designer_name">AP</string>

</resources>