<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/catchphrase_background_color"
    tools:context=".PointsAddActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical50Guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical33Guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical67Guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".67" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal25Guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal75Guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".75" />

    <TextView
        android:id="@+id/teamOneHeader"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/team_one_title_text"
        style="@style/DefaultCatchphraseTextViewStyle"
        app:layout_constraintBottom_toTopOf="@+id/horizontal25Guideline"
        app:layout_constraintEnd_toStartOf="@+id/vertical50Guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teamTwoHeader"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/team_two_title_text"
        style="@style/DefaultCatchphraseTextViewStyle"
        app:layout_constraintBottom_toTopOf="@+id/horizontal25Guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical50Guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/teamOneScore"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/team_score_default_text"
        android:autoSizeMaxTextSize="100sp"
        style="@style/DefaultCatchphraseTextViewStyle"
        app:layout_constraintBottom_toTopOf="@+id/horizontal75Guideline"
        app:layout_constraintEnd_toStartOf="@+id/vertical33Guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal25Guideline" />

    <TextView
        android:id="@+id/teamTwoScore"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/team_score_default_text"
        android:autoSizeMaxTextSize="100sp"
        style="@style/DefaultCatchphraseTextViewStyle"
        app:layout_constraintBottom_toTopOf="@+id/horizontal75Guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical67Guideline"
        app:layout_constraintTop_toTopOf="@+id/horizontal25Guideline" />

    <Button
        android:id="@+id/teamOneAddButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:onClick="onTeamOneAddButtonClick"
        android:text="@string/team_score_increment_button_text"
        android:padding="0dp"
        style="@style/DefaultCatchphraseButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="W,1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal75Guideline" />

    <Button
        android:id="@+id/teamTwoAddButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:onClick="onTeamTwoAddButtonClick"
        android:text="@string/team_score_increment_button_text"
        android:padding="0dp"
        style="@style/DefaultCatchphraseButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="W,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal75Guideline"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/startNextRoundButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:onClick="onStartNextRoundButtonClick"
        android:text="@string/start_next_round_button_text"
        style="@style/DefaultCatchphraseButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vertical67Guideline"
        app:layout_constraintStart_toStartOf="@+id/vertical33Guideline"
        app:layout_constraintTop_toTopOf="@+id/horizontal75Guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>